# libviprs-bench

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  run-bench.sh
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
benches/: engine_comparison.rs
fixtures/: PROVENANCE.md
src/: check_libvips_pin.rs  cross_version.rs  flame.rs  flamegraph.rs  harness.rs  lib.rs  pdfium_strip_source_bench.rs  pin_check.rs  provenance.rs  report.rs  scalability.rs  version_id.rs  version_matrix.rs  version_matrix_main.rs
tests/: budget_hardening.rs  chart_shape_drift.rs  flamegraph_weighting.rs  history_migration.rs  host_load_provenance.rs  libvips_provenance.rs  libvips_upstream_check.rs  metric_labels.rs  output_equivalence.rs  pdf_fixture.rs  pdf_scalability_series.rs  pdfium_provenance.rs  rss_isolation.rs  streaming_budget.rs  version_matrix.rs  vips_ffi.rs
tests/fixtures/: benchmark_history_legacy.json  libvips_releases_sample.json
tools/: check-libvips-pin.sh
tools/charts/: chart.mjs  chart.test.mjs  golden.test.mjs  grouped.test.mjs  labels.test.mjs  package.json  render.mjs  render.test.mjs
tools/charts/fixtures/: golden_history.json  golden_results.json  golden_scalability.json  sample_history.json  sample_scalability.json
