[package]
name = "libviprs-bench"
version = "0.3.0"
edition = "2024"
authors = ["Roman Goldmann <roman@devshell.org>"]
rust-version = "1.85"
publish = false

[features]
default = []
libvips = ["dep:libvips-rs"]
pdfium = ["libviprs/pdfium"]
# Cross-version analysis stack. Pulls in polars for columnar
# aggregation over the BenchmarkSnapshot history. Heavy (~5 MB
# compiled), kept off by default so the everyday bench builds stay
# light. Gates the `cross_version` binary.
polars = ["dep:polars"]

[dependencies]
libviprs = { path = "../libviprs" }
chrono = { version = "0.4", features = ["serde"] }
criterion = { version = "0.5", features = ["html_reports"] }
image = "0.25"
inferno = "0.12"
libc = "0.2"
libvips-rs = { version = "8.18", optional = true }
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }
polars = { version = "0.50", optional = true, default-features = false, features = [
    "lazy",
    "csv",
    "fmt",
    "diff",
    "round_series",
    "rank",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_comparison"
harness = false

[[bin]]
name = "flamegraph"
path = "src/flamegraph.rs"

[[bin]]
name = "report"
path = "src/report.rs"

[[bin]]
name = "scalability"
path = "src/scalability.rs"

[[bin]]
name = "pdfium_strip_source_bench"
path = "src/pdfium_strip_source_bench.rs"
required-features = ["pdfium"]

[[bin]]
name = "cross_version"
path = "src/cross_version.rs"
required-features = ["polars"]
