[package]
name = "libviprs-bench"
version = "0.3.0"
edition = "2024"
authors = ["Roman Goldmann <roman@devshell.org>"]
rust-version = "1.85"
publish = false

[features]
default = []
libvips = ["dep:libvips-rs"]
pdfium = ["libviprs/pdfium"]
# Cross-version analysis stack. Pulls in polars for columnar
# aggregation over the BenchmarkSnapshot history. Heavy (~5 MB
# compiled), kept off by default so the everyday bench builds stay
# light. Gates the `cross_version` binary.
polars = ["dep:polars"]

# Pinned measurement profile. Benchmark numbers are only meaningful under
# a fixed optimizer configuration; this is THE config the committed
# report/ artifacts were measured with. `run-bench.sh` additionally pins
# RUSTFLAGS (recorded in each snapshot's provenance). Keep these two in
# lockstep — changing them invalidates cross-run comparisons (issue #162).
[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
libviprs = { path = "../libviprs" }
chrono = { version = "0.4", features = ["serde"] }
criterion = { version = "0.5", features = ["html_reports"] }
image = "0.25"
inferno = "0.12"
libc = "0.2"
# In-process libvips FFI (gated by the `libvips` feature). Its major.minor
# MUST track the libvips the container builds — `provenance::PINNED_LIBVIPS_VERSION`
# and the Dockerfile's `ARG LIBVIPS_VERSION` (both 8.18.x). Measuring one
# libvips series through a different-series binding is its own mismatched
# oracle (issue #33); `tests/libvips_provenance.rs` asserts they stay aligned.
libvips-rs = { version = "8.18", optional = true }
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }
polars = { version = "0.50", optional = true, default-features = false, features = [
    "lazy",
    "csv",
    "fmt",
    "diff",
    "round_series",
    "rank",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_comparison"
harness = false

[[bin]]
name = "flamegraph"
path = "src/flamegraph.rs"

[[bin]]
name = "report"
path = "src/report.rs"

# Version-matrix runner: `--versions <tag,tag,HEAD>` builds + benchmarks the
# harness against a series of core releases in one invocation, appending the
# release-history axis to benchmark_history.json (issues #19, #26, #27).
[[bin]]
name = "version_matrix"
path = "src/version_matrix_main.rs"

[[bin]]
name = "scalability"
path = "src/scalability.rs"

[[bin]]
name = "pdfium_strip_source_bench"
path = "src/pdfium_strip_source_bench.rs"
required-features = ["pdfium"]

[[bin]]
name = "cross_version"
path = "src/cross_version.rs"
required-features = ["polars"]
# Mirror the core crate's `pdfium-render` thread-safety fork. `[patch]`
# tables apply only from the build-root manifest, so the pin in
# `../libviprs/Cargo.toml` does not reach this crate when it is the
# build root — this crate resolves the unpatched `pdfium-render 0.8.37`
# from crates.io, whose `ThreadSafePdfiumBindings` acquires the pdfium
# global mutex only once on `FPDF_InitLibrary` and bypasses it for
# every other call, segfaulting under concurrent access to a shared
# `Pdfium`. Keep this pin in lockstep with `../libviprs/Cargo.toml`;
# drop both once the fork is upstreamed and released.
[patch.crates-io]
pdfium-render = { git = "https://github.com/libviprs/pdfium-render.git", branch = "libviprs/integration" }
